# shared-kernel

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  tox.ini
.claude/: settings.json
.claude/hooks/: block-main-edits.ps1
.github/workflows/: claude-code-review.yml  claude.yml  release.yaml  tests.yaml
docs/: index.md
docs/explanation/: architecture.md  ddd.md  errors.md
docs/how-to/: domain-models.md  messaging.md  persistence.md  validation.md
docs/reference/: api.md  application.md  domain.md  infrastructure.md
docs/tutorials/: first-aggregate.md  getting-started.md
sharedkernel/: __init__.py
sharedkernel/api/: __init__.py  contracts.py  errors.py  exceptions.py  mappers.py  services.py
sharedkernel/application/: __init__.py  commands.py  errors.py  events.py  exceptions.py  queries.py  services.py  validators.py
sharedkernel/domain/: __init__.py  data.py  errors.py  events.py  exceptions.py  models.py  repositories.py  services.py  specifications.py
sharedkernel/infrastructure/: __init__.py  data.py  database.py  errors.py  exceptions.py  mappers.py  projections.py  services.py
src/sharedkernel/domain/: events.py
tests/: conftest.py
tests/api/: contracts_test.py  mappers_test.py  services_test.py
tests/application/: commands_test.py  errors_test.py  queries_test.py  service_bus_test.py  services_test.py
tests/domain/: errors_test.py  event_test.py  events_test.py  models_test.py  repositories_test.py  services_test.py  specifications_test.py
tests/infrastructure/: errors_test.py  event_broker_test.py  event_dispatcher_test.py  mappers_test.py  projections_test.py  services_test.py
