[project]
name = "sharedkernel"
version = "5.0.0"
description = "Shared Kernel for clean architecture projects"
readme = "README.md"
authors = [
    { name = "Juan Luis Casanova", email = "juanluiscr27@hotmail.com" }
]
requires-python = ">=3.12"
license = { text = "CCPL" }
classifiers = [
    "License :: OSI Approved :: CCPL License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.12.5",
    "result>=0.17.0",
    "typeinspection @ git+https://github.com/juanluiscr27/type-inspection.git@v0.5.0",
]

[project.optional-dependencies]
testing = [
    "pytest>=9.0.2",
    "mypy>=1.19.1",
    "coverage>=7.13.2",
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
    "tox-gh-actions>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.19.1",
    "coverage>=7.13.2",
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
    "tox-gh-actions>=3.5.0",
    "wheel>=0.46.3",
    "setuptools>=80.10.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
sharedkernel = ["py.typed"]

[tool.flake8]
max-line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
