[metadata]
name = sharedkernel
version = 2.3.0
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/juanluiscr27
author = Juan Luis Casanova
author_email = juanluiscr27@hotmail.com
license = CCPL
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: CCPL License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages =
    find:
install_requires =
    pydantic>=2.6.4
    result>=0.16.1
    typeinspection @ git+https://github.com/juanluiscr27/type-inspection.git@main#egg=typeinspection
python_requires = >=3.12
zip_safe = no

[options.packages.find]
exclude =
    tests*
[options.extras_require]
testing =
    pytest>=8.1.1
    mypy>=1.9

[options.package_data]
sharedkernel = py.typed

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
